# federatedlearning

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: publish.yml
federatedlearning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
